@@ -3,27 +3,54 @@
 quota_nld \- quota netlink message daemon
 .SH SYNOPSIS
 .B quota_nld
-[
-.B \-DCn
-]
+[[
+.B \-D
+|
+.B \-C
+][
+.B \-F
+][
+.B \-b
+]]
 .SH DESCRIPTION
 .BR quota_nld
-is a daemon that listens on netlink socket and processes received quota
-warnings. Note, that you have to enable the kernel support for sending quota
-messages over netlink (in Filesystems->Quota menu). The daemon supports
-forwarding warning messages to the system's DBUS (so that desktop manager
-can display a dialog) and writing them to the terminal user has last accessed.
+listens on netlink socket and processes received quota
+warnings. By default
+.BR quota_nld
+forwards warning messages to both the system's DBUS (so that the desktop
+manager can display a dialog) and the last-accessed terminal of the user to
+whom each warning is directed. Either of these destinations can be disabled
+with the
+.B \-D
+and
+.B \-C
+options, respectively.
+
+In the case of the user's terminal, quota messages about falling below
+the hard and soft limits are not sent unless the
+.B \-b
+option is specified. In the case of the DBUS, all quota messages are sent.
+
+Note, that you have to enable the kernel support for sending quota
+messages over netlink (in Filesystems->Quota menu).
 
 .SH OPTIONS
 .TP
 .B \-V, \-\-version
-Shows version of quota tools.
+Shows version of quota tools and exit.
+.TP
+.B \-h, \-\-help
+Show a usage message and exit
 .TP
 .B \-D, \-\-no-dbus
 Do not forward quota warnings to DBUS.
 .TP
 .B \-C, \-\-no-console
-Do not print quota warnings to the terminal.
+Do not print quota warnings to the user's last-accessed terminal.
+.TP
+.B \-b, \-\-print-below
+If quota warnings are printed to users' terminals, include
+messages about falling below their hard and soft limits.
 .TP
 .B \-F, \-\-foreground
 Run daemon in foreground (may be useful for debugging purposes).
