@@ -1,4 +1,6 @@
 Changes in quota-tools from 3.17 to 4.00-pre1
+* Improved manpage of quota_nld (Eddie)
+* Fixed long option handling of quota_nld (Jan Kara)
 * Fixed error reporting when rpc format specified on command line (Jan Kara)
 * Convert quota limits using rq_bsize from RPC request (Jan Kara)
 * Added noreturn attribute to die to avoid false warnings (Jan Kara)
